--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -13,7 +13,8 @@
                     <li>{{restaurant.opening_time}}</li>
                     <li>{{restaurant.closing_time}}</li>
                 </ul>
-            </a>
+            </a>    
+            <a href="{% url 'restaurant-delete' restaurant.id %}">Delete</a>
         {% endfor %}
     </body>
 </html>
