--- a/restaurants/templates/update.html
+++ b/restaurants/templates/update.html
@@ -5,6 +5,11 @@
         <title>Update</title>
     </head>
     <body>
+      <form action="{% url 'update-view' object_id=obj.id %}" method="POST">
+        {% csrf_token %}
+        {{form}}
+        <input type="submit" value="Update">
+	  </form>
 
     </body>
 </html>
